@@ -350,7 +350,7 @@ scribbu::csv_pprinter::pprint_COM(const COM &f, std::ostream &os)
   std::tie(dst, rsp) = encoding_from_stream(os);
 
   char lang[3];
-  f.lang(lang);
+  std::tie(lang[0], lang[1],lang[2]) = f.lang();
 
   return os << lang[0] << lang[1] << lang[2] << sep_ <<
     escape(f.description<string>(dst, rsp, v2enc_)) << sep_ <<
@@ -500,7 +500,7 @@ scribbu::csv_pprinter::pprint_COMM(const COMM &f, std::ostream &os)
   std::tie(dst, rsp) = encoding_from_stream(os);
 
   char lang[3];
-  f.lang(lang);
+  std::tie(lang[0], lang[1],lang[2]) = f.lang();
 
   return os << lang[0] << lang[1] << lang[2] << sep_ <<
     escape(f.description<string>(dst, rsp, v2enc_)) << sep_ <<
@@ -664,7 +664,7 @@ scribbu::csv_pprinter::pprint_COMM_2_4(const COMM_2_4 &f, std::ostream &os)
   std::tie(dst, rsp) = encoding_from_stream(os);
 
   char lang[3];
-  f.lang(lang);
+  std::tie(lang[0], lang[1], lang[2]) = f.lang();
 
   return os << lang[0] << lang[1] << lang[2] << sep_ <<
     escape(f.description<string>(dst, rsp, v2enc_)) << sep_ <<
